2002-07-02  Derek Atkins  <derek@ihtfp.com>

	* register/register-gnome/gnucash-sheet.c: allow a caller to
	"unset" the popup menu by passing a NULL popup.

	* business/business-gnome/dialog-invoice.c: use glade for the
	popup.  Only set the popup for Read-Write invoices.
	* business/business-gnome/glade/invoice.glade: define the popup
	menu in glade.

	* add a menubar to the Invoice Window in glade

	* fill out the Invoice Window Menu, based upon the Register
	Window.  Fill in the callbacks required to get the menu to work.

	* Create a hook into the "owner-report" and link that into the
	Invoice Window, so you can print the report from any Invoice.

	* add a hook in the entry ledger to obtain the current Query (to
	set the sort order).

	* options.scm: Create gnc:make-account-list-limited-option
	function that adds a list of valid account-types; this limits the
	account-tree dialog to only "reasonable" accounts.

	* option-util.[ch]: add function to obtain GList* of valid
	account-types.  NULL means "all".

	* dialog-options: Limit account-list by types.

	* Update payables and receivables reports to limit account types.
	
2002-07-01  Derek Atkins  <derek@ihtfp.com>

	* business-gnome/dialog-invoice.c: make all my callbacks
	non-static; remove the toolbar creation code.
	* business-gnome/glade/invoice.glade: create the toolbar in glade.
	
2002-07-01  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/dialog-scheduledxaction.c:
	* src/gnome/dialog-sxsincelast.c: 
	* src/app-utils/prefs.scm: Added options/code-support for
	saving/restoring sizes of SX-related windows.  Fixes bug 86007.

2002-07-01  Derek Atkins  <derek@ihtfp.com>
	* Convert all (well, most all) HTML URL-generators to use
	gnc_build_url() (or gnc:html-build-url in scheme) instead of
	assuming the HTML prototype string.  Unfortunately the
	help-window-index.scm cannot be fixed.

2002-07-01  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome-utils/gnc-dense-cal.c (gnc_dense_cal_mark_remove):